--- a/app/views/meetings/_form.erb
+++ b/app/views/meetings/_form.erb
@@ -10,7 +10,7 @@
     <div class="form-group row">
       <label for="meeting-start-time" class="col-2 col-form-label">Start time</label>
       <div class="col-12">
-        <%= f.text_field :start_time, class: 'form-control', id: 'meeting-start-time', type: "datetime-local", value: meeting.start_time  %>
+        <%= f.text_field :start_time, class: 'form-control', id: 'meeting-start-time', type: "datetime-local", value: meeting.start_time.strftime('%Y-%m-%dT%H:%M')  %>
       </div>
     </div>
 
@@ -18,7 +18,7 @@
     <div class="form-group row">
       <label for="meeting-end-time" class="col-2 col-form-label">End time</label>
       <div class="col-12">
-        <%= f.text_field :end_time, class: 'form-control', id: 'meeting-end-time', type: "datetime-local", value: meeting.end_time  %>
+        <%= f.text_field :end_time, class: 'form-control', id: 'meeting-end-time', type: "datetime-local", value: meeting.end_time.strftime('%Y-%m-%dT%H:%M')  %>
       </div>
     </div>
 
