--- a/app/assets/stylesheets/info.scss
+++ b/app/assets/stylesheets/info.scss
@@ -1,3 +1,4 @@
+@import "variables";
 .info-pages {
   &.map, &.schedule {
     .info-row {
@@ -7,6 +8,44 @@
         &.address-location {
           font-weight: 600;
         }
+      }
+    }
+  }
+  &.card-view {
+    .card {
+      cursor: pointer;
+      padding: 15px;
+      margin: 15px;
+    }
+    .hide-when-closed {
+      display: none;
+    }
+    .show-when-closed {
+      display: inline-block;
+    }
+    .more {
+      text-align: center;
+    }
+    .open-card {
+      img {
+        display: none;
+      }
+      .card-body {
+        padding: 0;
+        p, h4 {
+          padding: 5px 15px;
+        }
+      }
+      .card-title {
+        margin-top: 0;
+        color: white;
+        background: $kendo-blue-light;
+      }
+      .hide-when-closed {
+        display: inline-block;
+      }
+      .show-when-closed, .more {
+        display: none;
       }
     }
   }
