--- a/app/views/home/faq.erb
+++ b/app/views/home/faq.erb
@@ -4,7 +4,7 @@
 
   <div class="row">
     <div class="faq card col-5 res-faq" id="faq">
-      <img class="card-img-top" src="<%=random_default_image%>" alt="FAQ">
+      <%= image_tag random_default_image, {alt: 'FAQ', class: 'card-img-top'} %>
       <div class="card-body">
         <h4 class="card-title">Frequently asked questions</h4>
         <p class="card-text">
@@ -35,7 +35,8 @@
     <%@grouped_resources.each_with_index do |(category_id, resources), idx|%>
       <% category = resources.first.category%>
       <div class="res-cat-<%=category_id %> card col-5 res-faq" id="res-cat-<%=category_id %>">
-        <img class="card-img-top" src="<%=category.image_url ? category.image_url : random_default_image%>" alt="FAQ">
+        <% url = category.image_url ? category.image_url : random_default_image%>
+        <%= image_tag url, {alt: category.name, class: 'card-img-top'} %>
         <div class="card-body">
           <h4 class="card-title"><%= category.name %></h4>
           <p class="card-text">
