small styling fix

--- a/app/views/home/faq.erb
+++ b/app/views/home/faq.erb
@@ -9,7 +9,7 @@
         <h4 class="card-title">Frequently asked questions</h4>
         <p class="card-text">
           Find answers to many of your questions here.
-          <span class="show-when-closed">Click on this card to see more.</span>
+          <div class="show-when-closed">Click on this card to see more.</div>
         </p>
       </div>
       <ul class="list-group list-group-flush">
