#15 - fixed add new meetings bug

--- a/app/views/meetings/manage.erb
+++ b/app/views/meetings/manage.erb
@@ -6,10 +6,10 @@
     </div>
     <div class="col-2">
       <%= link_to new_repeating_meeting_path, class: "add-button mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored fixed-add-button" do%>
-          <i class="material-icons">library_add</i>
+          <i class="material-icons" title="Add repeating events here">library_add</i>
       <%end%>
       <%= link_to new_meeting_path, class: "add-button mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored fixed-add-button" do%>
-          <i class="material-icons">add</i>
+          <i class="material-icons" title="Add one time events here">add</i>
       <%end%>
     </div>
   </div>
