--- a/app/views/repeating_meetings/_form.erb
+++ b/app/views/repeating_meetings/_form.erb
@@ -20,7 +20,8 @@
     <div class="form-group row">
       <label for="repeating-meeting-start-time" class="col-2 col-form-label">Start time</label>
       <div class="col-12">
-        <%= f.text_field :start_time, class: 'form-control', id: 'repeating-meeting-start-time', type: "time", value: repeating_meeting.start_time.strftime('%H:%M')  %>
+        <% meeting_time = repeating_meeting.start_time.present? ? repeating_meeting.start_time.strftime('%H:%M') : repeating_meeting.start_time %>
+        <%= f.text_field :start_time, class: 'form-control', id: 'repeating-meeting-start-time', type: "time", value: meeting_time  %>
       </div>
     </div>
 
@@ -28,7 +29,8 @@
     <div class="form-group row">
       <label for="repeating-meeting-end-time" class="col-2 col-form-label">End time</label>
       <div class="col-12">
-        <%= f.text_field :end_time, class: 'form-control', id: 'repeating-meeting-end-time', type: "time", value: repeating_meeting.end_time.strftime('%H:%M')  %>
+        <% meeting_time = repeating_meeting.end_time.present? ? repeating_meeting.end_time.strftime('%H:%M') : repeating_meeting.end_time %>
+        <%= f.text_field :end_time, class: 'form-control', id: 'repeating-meeting-end-time', type: "time", value: meeting_time  %>
       </div>
     </div>
 
