small css fix on meeting page

--- a/app/views/meetings/manage.erb
+++ b/app/views/meetings/manage.erb
@@ -83,7 +83,7 @@
       </div>
     </div>
   <% else %>
-    <div class="col">No repeating meetings saved yet.</div>
+    <div class="col result-info">No repeating meetings saved yet.</div>
   <%end%>
 
   <% if @has_meetings  %>
