--- a/app/assets/stylesheets/manage.scss
+++ b/app/assets/stylesheets/manage.scss
@@ -36,11 +36,10 @@
   }
   .label {
     font-weight: 600;
-    width: 100px;
+    width: 20%;
   }
   .item {
     width: 80%;
-
   }
   .actions {
     text-align: right;
