--- a/app/views/home/manage.erb
+++ b/app/views/home/manage.erb
@@ -16,6 +16,15 @@
           <%end%>
         </ul>
         <div class="card-block">
+          <p class="card-text highlight-card-text">Videos</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <i class="material-icons"><%=@all_sym%></i>
+            <%= link_to 'All Videos', manage_videos_path %>
+          </li>
+        </ul>
+        <div class="card-block">
           <p class="card-text highlight-card-text">Photographers</p>
         </div>
         <ul class="list-group list-group-flush">
