adding videos to the resources page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
       <div class="navbar-brand">
         More Information
       </div>
-      <div class="nav-item"><%= link_to 'FAQ', faq_path, class: 'nav-link' %></div>
+      <div class="nav-item"><%= link_to 'FAQ & Resources', material_path, class: 'nav-link' %></div>
       <div class="nav-item"><%= link_to 'Terms of Usage', terms_path, class: 'nav-link' %></div>
       <div class="nav-item"><%= link_to 'Credits', credits_path, class: 'nav-link' %></div>
     </div>
