--- a/app/assets/stylesheets/info.scss
+++ b/app/assets/stylesheets/info.scss
@@ -14,38 +14,12 @@
   &.card-view {
     .card {
       cursor: pointer;
+      margin-bottom: 15px;
       padding: 15px;
-      margin: 15px;
-    }
-    .hide-when-closed {
-      display: none;
-    }
-    .show-when-closed {
-      display: inline-block;
-    }
-    .more {
-      text-align: center;
-    }
-    .open-card {
-      img {
-        display: none;
-      }
-      .card-body {
-        padding: 0;
-        p, h4 {
-          padding: 5px 15px;
-        }
-      }
       .card-title {
+        font-size: 14px;
+        text-align: center;
         margin-top: 0;
-        color: white;
-        background: $kendo-blue-light;
-      }
-      .hide-when-closed {
-        display: inline-block;
-      }
-      .show-when-closed, .more {
-        display: none;
       }
     }
   }
